# sentiment-service

./: .dvcignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  interactive.ipynb  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
src/: api.py  inference.py  mlflow_utils.py  sweep.py  train.py
tests/: conftest.py  test_api.py  test_mlflow_utils.py
