[project]
name = "sentiment-service"
version = "0.1.0"
description = "Fine-tune and serve a multilingual sentiment analysis model on tweet data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.7.0",
    "numpy>=2.0.0",
    "protobuf>=7.34.0",
    "rich==14.3.3",
    "scikit-learn==1.8.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "transformers==5.3.0",
    "typer==0.24.1",
]

[dependency-groups]
cuda = [
    "torch",
]
rocm = [
    "torch",
    "triton-rocm",
]

[tool.uv]
conflicts = [
    [
        { group = "cuda" },
        { group = "rocm" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", group = "cuda" },
    { index = "pytorch-rocm", group = "rocm" },
]
triton-rocm = [
    { index = "pytorch-rocm", group = "rocm" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true


